force-app/main/default/objects/Counter_Offer__c/Counter_Offer__c.object-meta.xml
<CustomObject>
    <label>Counter Offer</label>
    <nameField>
        <displayFormat>CO-{0000}</displayFormat>
        <label>Counter Offer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Counter Offers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>