force-app/main/default/objects/Counter_Offer__c/fields/Counter_Cap_Rate__c.field-meta.xml
<CustomField>
    <fullName>Counter_Cap_Rate__c</fullName>
    <description>Cap rate attached to this counter (Junior: every counter captures price AND cap rate).</description>
    <label>Counter Cap Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>