force-app/main/default/objects/Counter_Offer__c/fields/Counter_Date__c.field-meta.xml
<CustomField>
    <fullName>Counter_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>When this counter was made/received (editable for backdating; defaults to today).</description>
    <label>Counter Date</label>
    <type>Date</type>
</CustomField>