force-app/main/default/objects/Counter_Offer__c/fields/LOI__c.field-meta.xml
<CustomField>
    <fullName>LOI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LOI</label>
    <referenceTo>LOI__c</referenceTo>
    <relationshipLabel>Counter Offers</relationshipLabel>
    <relationshipName>Counter_Offers</relationshipName>
    <type>Lookup</type>
</CustomField>