force-app/main/default/objects/Counter_Offer__c/fields/Revision_Number__c.field-meta.xml
<CustomField>
    <fullName>Revision_Number__c</fullName>
    <description>Revision number of the LOI/counter document for this exchange (e.g. v3, Rev B).</description>
    <label>Revision Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>