force-app/main/default/objects/Counter_Offer__c/fields/Subsequent_Version__c.field-meta.xml
<CustomField>
    <fullName>Subsequent_Version__c</fullName>
    <description>Subsequent (next) document version produced from this counter.</description>
    <label>Subsequent Version</label>
    <length>30</length>
    <type>Text</type>
</CustomField>